# founder-product-feedback-roadmap-os

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: company_profile.yml  scoring_rules.yml
data/: README.md  sample_product_feedback.csv
docs/: feedback-tracker-template.md  founder-use-case.md  how-to-fork-and-use.md  operating-rhythm.md  scoring-methodology.md  where-this-fits-in-founder-os.md
outputs/: account_feedback_view.csv  customer_signal_matrix.csv  founder_roadmap_memo.md  non_product_fix_queue.csv  product_gap_summary.csv  product_operating_review.md  roadmap_decision_queue.csv  roadmap_priority_scorecard.csv  score_explanations.csv
prompts/: customer_signal_review_prompt.md  feedback_clustering_prompt.md  product_decision_memo_prompt.md  roadmap_prioritization_prompt.md
src/founder_product_roadmap/: __init__.py  cli.py  clustering.py  config.py  ingest.py  prioritization.py  recommendations.py  reporting.py  scoring.py  utils.py
tests/: test_clustering.py  test_ingest.py  test_prioritization.py  test_recommendations.py  test_reporting.py  test_scoring.py
